examples/errors/unknown_function.aaa
fn foo {
    bar
}


fn
    main
{
    nop
}
